<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Home"
    android:background="#000000" >

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:text="@string/display"
        android:id = "@+id/display"/>
    
   <LinearLayout android:orientation="horizontal"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:gravity="center"
       android:paddingTop="20dp">
    	<Button 
    		android:layout_width="55dp"
    		android:layout_height="wrap_content"
    		android:id = "@+id/seven"
    		android:text="@string/seven"
    		android:textStyle="bold" 
    		android:textColor="#FFFFFF"
    		android:background="#757575"
    		style="?android:attr/borderlessButtonStyle"
    		android:layout_marginRight="1dp"
		/>
   		<Button 
    		android:layout_width="55dp"
    		android:layout_height="wrap_content"
    		android:id = "@+id/eight"
    		android:text="@string/eight"
    		android:textStyle="bold" 
    		android:textColor="#FFFFFF"
    		android:background="#757575"
    		style="?android:attr/borderlessButtonStyle"
    		android:layout_marginRight="1dp"
		/>
    	<Button 
    		android:layout_width="55dp"
    		android:layout_height="wrap_content"
    		android:id = "@+id/nine"
    		android:text="@string/nine"
    		android:textStyle="bold" 
    		android:textColor="#FFFFFF"
    		android:background="#757575"
    		style="?android:attr/borderlessButtonStyle"
    		android:layout_marginRight="1dp"
		/>
    	<Button 
    		android:layout_width="55dp"
    		android:layout_height="wrap_content"
    		android:id = "@+id/divide"
    		android:text="@string/divide"
    		android:textStyle="bold" 
    		android:textColor="#FFFFFF"
    		android:background="#545454"
    		style="?android:attr/borderlessButtonStyle"
		/> 
   </LinearLayout>
   
    <LinearLayout android:orientation="horizontal"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:paddingTop="1dp"
       android:gravity="center">
    	<Button 
    		android:layout_width="55dp"
    		android:layout_height="wrap_content"
    		android:id = "@+id/four"
    		android:text="@string/four"
    		android:textStyle="bold" 
    		android:textColor="#FFFFFF"
    		android:background="#757575"
    		style="?android:attr/borderlessButtonStyle"
    		android:layout_marginRight="1dp"
		/>
    	<Button 
    		android:layout_width="55dp"
    		android:layout_height="wrap_content"
    		android:id = "@+id/five"
    		android:text="@string/five"
    		android:textStyle="bold" 
    		android:textColor="#FFFFFF"
    		android:background="#757575"
    		style="?android:attr/borderlessButtonStyle"
    		android:layout_marginRight="1dp"
		/>
    	<Button 
    		android:layout_width="55dp"
    		android:layout_height="wrap_content"
    		android:id = "@+id/six"
    		android:text="@string/six"
    		android:textStyle="bold" 
    		android:textColor="#FFFFFF"
    		android:background="#757575"
    		style="?android:attr/borderlessButtonStyle"
    		android:layout_marginRight="1dp"
		/>
    	<Button 
    		android:layout_width="55dp"
    		android:layout_height="wrap_content"
    		android:id = "@+id/multiply"
    		android:text="@string/multiply"
    		android:textStyle="bold" 
    		android:textColor="#FFFFFF"
    		android:background="#545454"
    		style="?android:attr/borderlessButtonStyle"
		/> 
   </LinearLayout>
   
   <LinearLayout android:orientation="horizontal"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:paddingTop="1dp"
       android:gravity="center">
    	<Button 
    		android:layout_width="55dp"
    		android:layout_height="wrap_content"
    		android:id = "@+id/one"
    		android:text="@string/one"
    		android:textStyle="bold" 
    		android:textColor="#FFFFFF"
    		android:background="#757575"
    		style="?android:attr/borderlessButtonStyle"
    		android:layout_marginRight="1dp"
		/>
    	<Button 
    		android:layout_width="55dp"
    		android:layout_height="wrap_content"
    		android:id = "@+id/two"
    		android:text="@string/two"
    		android:textStyle="bold" 
    		android:textColor="#FFFFFF"
    		android:background="#757575"
    		style="?android:attr/borderlessButtonStyle"
    		android:layout_marginRight="1dp"
		/>
    	<Button 
    		android:layout_width="55dp"
    		android:layout_height="wrap_content"
    		android:id = "@+id/three"
    		android:text="@string/three"
    		android:textStyle="bold" 
    		android:textColor="#FFFFFF"
    		android:background="#757575"
    		style="?android:attr/borderlessButtonStyle"
    		android:layout_marginRight="1dp"
		/>
    	<Button 
    		android:layout_width="55dp"
    		android:layout_height="wrap_content"
    		android:id = "@+id/subtract"
    		android:text="@string/subtract"
    		android:textStyle="bold" 
    		android:textColor="#FFFFFF"
    		android:background="#545454"
    		style="?android:attr/borderlessButtonStyle"
		/> 
   </LinearLayout>
   
   <LinearLayout android:orientation="horizontal"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:paddingTop="1dp"
       android:gravity="center">
    	<Button 
    		android:layout_width="55dp"
    		android:layout_height="wrap_content"
    		android:id = "@+id/clear"
    		android:text="@string/clear"
    		android:textStyle="bold" 
    		android:textColor="#FFFFFF"
    		android:background="#545454"
    		style="?android:attr/borderlessButtonStyle"
    		android:layout_marginRight="1dp"
		/>
    	<Button 
    		android:layout_width="55dp"
    		android:layout_height="wrap_content"
    		android:id = "@+id/zero"
    		android:text="@string/zero"
    		android:textStyle="bold" 
    		android:textColor="#FFFFFF"
    		android:background="#757575"
    		style="?android:attr/borderlessButtonStyle"
    		android:layout_marginRight="1dp"
		/>
    	<Button 
    		android:layout_width="55dp"
    		android:layout_height="wrap_content"
    		android:id = "@+id/equal"
    		android:text="@string/equal"
    		android:textStyle="bold" 
    		android:textColor="#FFFFFF"
    		android:background="#545454"
    		style="?android:attr/borderlessButtonStyle"
    		android:layout_marginRight="1dp"
		/>
    	<Button 
    		android:layout_width="55dp"
    		android:layout_height="wrap_content"
    		android:id = "@+id/add"
    		android:text="@string/add"
    		android:textStyle="bold" 
    		android:textColor="#FFFFFF"
    		android:background="#545454"
    		style="?android:attr/borderlessButtonStyle"
		/>
   </LinearLayout>
</LinearLayout>